--- a/index.html
+++ b/index.html
@@ -1,68 +1,17 @@
-# Главная страница компании Cheldev
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cheldev - Загрузите наши приложения</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background: #333;
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-        }
-        .container {
-            width: 80%;
-            margin: auto;
-            overflow: hidden;
-        }
-        .login {
-            margin: 20px 0;
-            padding: 20px;
-            background: #fff;
-            border: 1px solid #ccc;
-        }
-        .download {
-            margin: 20px 0;
-            padding: 20px;
-            background: #fff;
-            border: 1px solid #ccc;
-        }
-    </style>
+    <title>Cheldev - Главная</title>
 </head>
 <body>
-    <header>
-        <h1>Добро пожаловать в Cheldev</h1>
-    </header>
-    <div class="container">
-        <div class="login">
-            <h2>Вход для администраторов</h2>
-            <form action="admin_dashboard.html" method="post">
-                <label for="username">Логин:</label>
-                <input type="text" id="username" name="username" required>
-                <br>
-                <label for="password">Пароль:</label>
-                <input type="password" id="password" name="password" required>
-                <br>
-                <button type="submit">Войти</button>
-            </form>
-        </div>
-        <div class="download">
-            <h2>Скачать приложения</h2>
-            <ul>
-                <li><a href="app1.zip">Приложение 1</a></li>
-                <li><a href="app2.zip">Приложение 2</a></li>
-                <li><a href="app3.zip">Приложение 3</a></li>
-            </ul>
-        </div>
-    </div>
+    <h1>Добро пожаловать в Cheldev</h1>
+    <h2>Доступные приложения</h2>
+    <ul>
+        <li><a href="app1.zip" download>Приложение 1</a></li>
+        <li><a href="app2.zip" download>Приложение 2</a></li>
+    </ul>
+    <p><a href="login.html">Вход в панель администратора</a></p>
 </body>
 </html>
