--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         <li><a href="app1.zip" download>Приложение 1</a></li>
         <li><a href="app2.zip" download>Приложение 2</a></li>
     </ul>
-    <p><a href="login.html">Вход в панель администратора</a></p>
+    <p><a href="/login">Вход в панель администратора</a></p>
 </body>
 </html>
