--- a/admin.html
+++ b/admin.html
@@ -7,16 +7,10 @@
 </head>
 <body>
     <h1>Панель администратора</h1>
-    <form id="uploadForm">
+    <form id="uploadForm" action="/upload" method="POST" enctype="multipart/form-data">
         <label for="file">Выберите файл для загрузки:</label>
         <input type="file" id="file" name="file" required>
         <button type="submit">Загрузить</button>
     </form>
-    <script>
-        document.getElementById('uploadForm').onsubmit = function(event) {
-            event.preventDefault();
-            alert('Файл загружен (это имитация, реальная загрузка не реализована).');
-        };
-    </script>
 </body>
 </html>
