--- a/login.html
+++ b/login.html
@@ -7,20 +7,12 @@
 </head>
 <body>
     <h1>Вход в панель администратора</h1>
-    <form id="loginForm">
+    <form action="/login" method="POST">
         <label for="username">Логин:</label>
         <input type="text" id="username" name="username" required>
         <label for="password">Пароль:</label>
         <input type="password" id="password" name="password" required>
         <button type="submit">Войти</button>
     </form>
-    <script>
-        document.getElementById('loginForm').onsubmit = function(event) {
-            event.preventDefault();
-            // Здесь должна быть проверка логина и пароля
-            alert('Вход выполнен (это имитация, реальная проверка не реализована).');
-            window.location.href = 'admin.html'; // Перенаправление в панель администратора
-        };
-    </script>
 </body>
 </html>
