--- a/admin.html
+++ b/admin.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Панель администратора</h1>
-    <form id="uploadForm" action="/upload" method="POST" enctype="multipart/form-data">
+    <form id="uploadForm" action="https://formspree.io/killmazila@gmail.com" method="POST" enctype="multipart/form-data">
         <label for="file">Выберите файл для загрузки:</label>
         <input type="file" id="file" name="file" required>
         <button type="submit">Загрузить</button>
