--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Вход в панель администратора</h1>
-    <form action="https://formspree.io/killmazila@gmail.com" method="POST">
+    <form action="https://formspree.io/f/mzzrejjd" method="POST">
         <label for="username">Логин:</label>
         <input type="text" id="username" name="username" required>
         <label for="password">Пароль:</label>
