--- a/login.html
+++ b/login.html
@@ -8,28 +8,36 @@
         function handleSubmit(event) {
             event.preventDefault(); // Предотвращаем стандартное поведение формы
 
-            const form = event.target;
-            const formData = new FormData(form);
+            const username = document.getElementById('username').value;
+            const password = document.getElementById('password').value;
 
-            fetch(form.action, {
-                method: 'POST',
-                body: formData,
-                headers: {
-                    'Accept': 'application/json'
-                }
-            })
-            .then(response => {
-                if (response.ok) {
-                    // Перенаправляем на панель администратора
-                    window.location.href = 'admin.html';
-                } else {
+            // Проверка учетных данных
+            if (username === 'admin' && password === 'admin') {
+                const form = event.target;
+                const formData = new FormData(form);
+
+                fetch(form.action, {
+                    method: 'POST',
+                    body: formData,
+                    headers: {
+                        'Accept': 'application/json'
+                    }
+                })
+                .then(response => {
+                    if (response.ok) {
+                        // Перенаправляем на панель администратора
+                        window.location.href = 'admin.html';
+                    } else {
+                        alert('Ошибка при отправке формы. Попробуйте еще раз.');
+                    }
+                })
+                .catch(error => {
+                    console.error('Ошибка:', error);
                     alert('Ошибка при отправке формы. Попробуйте еще раз.');
-                }
-            })
-            .catch(error => {
-                console.error('Ошибка:', error);
-                alert('Ошибка при отправке формы. Попробуйте еще раз.');
-            });
+                });
+            } else {
+                alert('Неверный логин или пароль.');
+            }
         }
     </script>
 </head>
