--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <h1>Вход в панель администратора</h1>
-    <form action="https://formspree.io/f/mzzrejjd" method="POST" onsubmit="handleSubmit(event)">
+    <form action="https://formspree.io/f/xkgrbrvb" method="POST" onsubmit="handleSubmit(event)">
         <label for="username">Логин:</label>
         <input type="text" id="username" name="username" required>
         <br>
