--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <script>
         const repoUrl = 'https://api.github.com/repos/CHELICK5832/files-cheldev/contents/';
-        const token = 'YOUR_GITHUB_TOKEN'; // Замените на ваш токен доступа GitHub
+        const token = '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'; // Замените на ваш токен доступа GitHub
 
         async function fetchRepoContents() {
             try {
