--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
           background: #e0e0e0;
           border-radius: 5px;
       }
+      .links-block {
+          margin-top: 20px;
+          padding: 20px;
+          background: #e0e0e0;
+          border-radius: 5px;
+      }
       .spacer {
           height: 800px; /* Высота для создания пространства */
       }
@@ -98,6 +104,11 @@
               <p>Следите за новыми обновлениями и релизами на нашем сайте!</p>
               <p>Если у вас есть вопросы или предложения, не стесняйтесь обращаться к нам через форму обратной связи.</p>
           </div>
+      </section>
+      <section class="links-block">
+          <h2>Полезные ссылки</h2>
+          <p><a href="https://cheldevco.github.io/Cheldev-Market/" target="_blank">Cheldev Market</a></p>
+          <p><a href="https://cheldevco.github.io/Blums/" target="_blank">Blums</a></p>
       </section>
       <section id="login" class="login-panel">
           <h2>Вход в Панель Администратора</h2>
