--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
           <h2>Полезные ссылки</h2>
           <p><a href="https://cheldevco.github.io/Cheldev-Market/" target="_blank">Cheldev Market</a></p>
           <p><a href="https://cheldevco.github.io/Blums/" target="_blank">Blums</a></p>
+		  <p><a href="https://cheldevco.github.io/mem/" target="_blank">СоВрЕМенЫй сАйТ</a></p>
+		  <p><a href="https://cheldevco.github.io/cheldevOS/" target="_blank">cheldevOS</a></p>
       </section>
       <section id="login" class="login-panel">
           <h2>Вход в Панель Администратора</h2>
