--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
           <p><a href="https://cheldevco.github.io/Blums/" target="_blank">Blums</a></p>
 		  <p><a href="https://cheldevco.github.io/mem/" target="_blank">СоВрЕМенЫй сАйТ</a></p>
 		  <p><a href="https://cheldevco.github.io/cheldevOS/" target="_blank">cheldevOS</a></p>
-	      <p><a href="https://cheldevco.github.io/Panel/">Panel</a></p>
+	      <p><a href="https://cheldevco.github.io/Panel/" target="_blank">Panel</a></p>
+          <p><a href="https://cheldevco.github.io/mems"target="_blank">мемчики</a></p>
       </section>
       <section id="login" class="login-panel">
           <h2>Вход в Панель Администратора</h2>
