--- a/apps.html
+++ b/apps.html
@@ -52,6 +52,7 @@
       <h2>Скачать приложение</h2>
       <p>Вы можете загрузить наше настольное приложение для Windows / Android:</p>
       <a class="download-button" href="client_Bank.exe" download>Скачать Client Bank</a>
+      <a class="download-button" href="app-release (1).apk" download>Скачать ФПИ. Кошель</a>
       
     </div>
   </div>
