--- a/index.html
+++ b/index.html
@@ -1,96 +1,119 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>cheldev</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Segoe UI', sans-serif;
-    }
-
-    body {
-      background-color: #ffffff;
-      color: #111111;
-    }
-
-    header {
-      background-color: #f5f5f5;
-      padding: 1.5rem 2rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      border-bottom: 1px solid #ddd;
-    }
-
-    nav a {
-      margin-left: 2rem;
-      text-decoration: none;
-      color: #333;
-      font-weight: 500;
-    }
-
-    nav a:hover {
-      color: #0077cc;
-    }
-
-    .container {
-      max-width: 960px;
-      margin: 2rem auto;
-      padding: 0 1rem;
-    }
-
-    .buttons {
-      margin-top: 2rem;
-      display: flex;
-      gap: 1rem;
-    }
-
-    .buttons a {
-      padding: 0.75rem 1.5rem;
-      background-color: #0077cc;
-      color: white;
-      text-decoration: none;
-      border-radius: 6px;
-      transition: background-color 0.3s;
-    }
-
-    .buttons a:hover {
-      background-color: #005fa3;
-    }
-
-    footer {
-      text-align: center;
-      padding: 2rem;
-      font-size: 0.9rem;
-      color: #888;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>cheldev - Разработка программного обеспечения</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="fonts/fonts.css">
 </head>
 <body>
-  <header>
-    <div><strong>cheldev</strong></div>
-    <nav>
-      <a href="apps.html">Приложения</a>
-      <a href="sites.html">Сайты</a>
-      <a href="1.html">Старая версия сайта</a>
-    </nav>
-  </header>
+    <header>
+        <nav>
+            <div class="logo">cheldev</div>
+            <ul class="nav-links">
+                <li><a href="#home">Главная</a></li>
+                <li><a href="#websites">Наши сайты</a></li>
+                <li><a href="#apps">Наши приложухи</a></li>
+                <li><a href="#about">О нас</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <div class="container">
-    <h1>Добро пожаловать в Cheldev</h1>
-    <p>Мы создаем современные приложения и сайты с акцентом на качество и минимализм.</p>
-    <div class="buttons">
-      <a href="apps.html">Перейти к приложениям</a>
-      <a href="sites.html">Перейти к сайтам</a>
-    </div>
-  </div>
+    <main>
+        <section id="home" class="hero">
+            <div class="hero-content">
+                <h1>Инновационные IT-решения</h1>
+                <p>Создаем современные технологические решения</p>
+            </div>
+        </section>
 
-  <footer>
-    © 2025 Cheldev. Все права защищены.
-  </footer>
+        <section id="websites" class="websites">
+            <h2>Наши сайты</h2>
+            <div class="projects-grid">
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="web.jpg" alt="Blums">
+                    </div>
+                    <div class="project-info">
+                        <h3>Blums</h3>
+                        <p>Современный веб-проект</p>
+                        <a href="https://cheldevco.github.io/Blums" target="_blank" class="project-link">Перейти на сайт</a>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="web.jpg" alt="Mems">
+                    </div>
+                    <div class="project-info">
+                        <h3>Mems</h3>
+                        <p>Интерактивный веб-проект</p>
+                        <a href="https://cheldevco.github.io/mems" target="_blank" class="project-link">Перейти на сайт</a>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="web.jpg" alt="Mem">
+                    </div>
+                    <div class="project-info">
+                        <h3>Mem</h3>
+                        <p>Креативный веб-проект</p>
+                        <a href="https://cheldevco.github.io/mem" target="_blank" class="project-link">Перейти на сайт</a>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="web.jpg" alt="CheldevOS">
+                    </div>
+                    <div class="project-info">
+                        <h3>cheldevOS</h3>
+                        <p>Инновационная операционная система</p>
+                        <a href="https://cheldevco.github.io/cheldevOS" target="_blank" class="project-link">Перейти на сайт</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="apps" class="apps">
+            <h2>Наши приложухи</h2>
+            <div class="projects-grid">
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="app.jpg" alt="Android App">
+                    </div>
+                    <div class="project-info">
+                        <h3>ФПИ. Кошель</h3>
+                        <p>Мобильное приложение для Android</p>
+                        <a href="app-release (1).apk" download class="project-link">Скачать APK</a>
+                    </div>
+                </div>
+                
+            </div>
+        </section>
+
+        <section id="about" class="about">
+            <h2>О компании</h2>
+            <p>cheldev - это команда профессионалов, специализирующихся на разработке программного обеспечения. Мы создаем инновационные решения, которые помогают бизнесу расти и развиваться.</p>
+            <p>наша тгешка <a href="https://t.me/cheldevv" target="_blank">тут</a></p>
+        </section>
+    </main>
+
+    <footer>
+        <div class="footer-content">
+            <div class="footer-info">
+                <h3>cheldev</h3>
+                <p>Инновационные IT-решения</p>
+            </div>
+            <div class="footer-links">
+                <a href="#privacy">Политика конфиденциальности</a>
+                <a href="#terms">Условия использования</a>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 cheldev. Все права защищены.</p>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
-</html>
+</html> 
