--- a/index.html
+++ b/index.html
@@ -71,6 +71,16 @@
                         <a href="https://cheldevco.github.io/cheldevOS" target="_blank" class="project-link">Перейти на сайт</a>
                     </div>
                 </div>
+				<div class="project-card">
+                    <div class="project-image">
+                        <img src="web.jpg" alt="Побег от МЕМОВ 2025">
+                    </div>
+                    <div class="project-info">
+                        <h3>Побег от МЕМОВ 2025</h3>
+                        <p>игруха</p>
+                        <a href="https://cheldevco.github.io/pobegotmemov/" target="_blank" class="project-link">Перейти на сайт</a>
+                    </div>
+                </div>
             </div>
         </section>
 
