--- a/index.html
+++ b/index.html
@@ -107,6 +107,16 @@
                         <a href="app-release.apk" download class="project-link">Скачать APK</a>
                     </div>
                 </div>
+				<div class="project-card">
+                    <div class="project-image">
+                        <img src="app.jpg" alt="Android App">
+                    </div>
+                    <div class="project-info">
+                        <h3>Escape of Memes</h3>
+                        <p>Мобильная игра для Android</p>
+                        <a href="app-release (3).apk" download class="project-link">Скачать APK</a>
+                    </div>
+                </div>
                 
             </div>
         </section>
