--- a/index.html
+++ b/index.html
@@ -117,6 +117,16 @@
                         <a href="app-release (3).apk" download class="project-link">Скачать APK</a>
                     </div>
                 </div>
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="app.jpg" alt="Android App">
+                    </div>
+                    <div class="project-info">
+                        <h3>ты на счетчике хе</h3>
+                        <p>Мобильное приложение для Android</p>
+                        <a href="Base.apk" download class="project-link">Скачать APK</a>
+                    </div>
+                </div>
                 
             </div>
         </section>
