--- a/index.html
+++ b/index.html
@@ -137,6 +137,16 @@
                         <a href="gta6.exe" download class="project-link">Скачать EXE</a>
                     </div>
                 </div>
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="app.jpg" alt="Android App">
+                    </div>
+                    <div class="project-info">
+                        <h3>GTA 6 ULTRA PRO MAX EDITION</h3>
+                        <p>Мобильное приложение для Android</p>
+                        <a href="gta6.apk" download class="project-link">Скачать APK</a>
+                    </div>
+                </div>
             </div>
         </section>
 
