--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <div class="project-info">
                         <h3>GTA 6 ULTRA PRO MAX EDITION</h3>
                         <p>Мобильное приложение для Android</p>
-                        <a href="gta6.apk" download class="project-link">Скачать APK</a>
+                        <a href="gta6ultrapromax-signed.apk" download class="project-link">Скачать APK</a>
                     </div>
                 </div>
             </div>
