--- a/index.html
+++ b/index.html
@@ -147,6 +147,16 @@
                         <a href="gta6ultrapromax-signed.apk" download class="project-link">Скачать APK</a>
                     </div>
                 </div>
+				<div class="project-card">
+                    <div class="project-image">
+                        <img src="app.jpg" alt="Android App">
+                    </div>
+                    <div class="project-info">
+                        <h3>ChelGram</h3>
+                        <p>Мобильное приложение для Android</p>
+                        <a href="chelgram-1.1.2.apk" download class="project-link">Скачать APK</a>
+                    </div>
+                </div>
             </div>
         </section>
 
