--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         <img src="app.jpg" alt="Windows App">
                     </div>
                     <div class="project-info">
-                        <h3>GTA 6 ULTRA PRO MAX EDITION</h3>
+                        <h3>GTA 6 ULTRA PRO MAX EDITION for Win</h3>
                         <p>Программа для Windows</p>
                         <a href="gta6.exe" download class="project-link">Скачать EXE</a>
                     </div>
@@ -155,6 +155,26 @@
                         <h3>ChelGram</h3>
                         <p>Мобильное приложение для Android</p>
                         <a href="chelgram-1.1.2.apk" download class="project-link">Скачать APK</a>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="app.jpg" alt="Android App">
+                    </div>
+                    <div class="project-info">
+                        <h3>Simple Platformer</h3>
+                        <p>Мобильное приложение для Android</p>
+                        <a href="Simple Platformer-1_0_1.apk" download class="project-link">Скачать APK</a>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="app.jpg" alt="Windows App">
+                    </div>
+                    <div class="project-info">
+                        <h3>Simple Platformer for Windows</h3>
+                        <p>Декстоп приложение для Windows</p>
+                        <a href="Simple Platformer-1_0_1-windows.exe" download class="project-link">Скачать EXE</a>
                     </div>
                 </div>
             </div>
