--- a/index.html
+++ b/index.html
@@ -3,206 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cheldev - Разработка программного обеспечения</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>cheldev переход</title>
     <link rel="stylesheet" href="fonts/fonts.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="logo">cheldev</div>
-            <ul class="nav-links">
-                <li><a href="#home">Главная</a></li>
-                <li><a href="#websites">Наши сайты</a></li>
-                <li><a href="#apps">Наши приложухи</a></li>
-                <li><a href="#about">О нас</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <section id="home" class="hero">
-            <div class="hero-content">
-                <h1>Инновационные IT-решения</h1>
-                <p>Создаем современные технологические решения</p>
-            </div>
-        </section>
-
-        <section id="websites" class="websites">
-            <h2>Наши сайты</h2>
-            <div class="projects-grid">
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="web.jpg" alt="Blums">
-                    </div>
-                    <div class="project-info">
-                        <h3>Blums</h3>
-                        <p>Современный веб-проект</p>
-                        <a href="https://cheldevco.github.io/Blums" target="_blank" class="project-link">Перейти на сайт</a>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="web.jpg" alt="Mems">
-                    </div>
-                    <div class="project-info">
-                        <h3>Mems</h3>
-                        <p>Интерактивный веб-проект</p>
-                        <a href="https://cheldevco.github.io/mems" target="_blank" class="project-link">Перейти на сайт</a>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="web.jpg" alt="Mem">
-                    </div>
-                    <div class="project-info">
-                        <h3>Mem</h3>
-                        <p>Креативный веб-проект</p>
-                        <a href="https://cheldevco.github.io/mem" target="_blank" class="project-link">Перейти на сайт</a>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="web.jpg" alt="CheldevOS">
-                    </div>
-                    <div class="project-info">
-                        <h3>cheldevOS</h3>
-                        <p>Инновационная операционная система</p>
-                        <a href="https://cheldevco.github.io/cheldevOS" target="_blank" class="project-link">Перейти на сайт</a>
-                    </div>
-                </div>
-				<div class="project-card">
-                    <div class="project-image">
-                        <img src="web.jpg" alt="Побег от МЕМОВ 2025">
-                    </div>
-                    <div class="project-info">
-                        <h3>Побег от МЕМОВ 2025</h3>
-                        <p>игруха</p>
-                        <a href="https://cheldevco.github.io/pobegotmemov/" target="_blank" class="project-link">Перейти на сайт</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="apps" class="apps">
-            <h2>Наши приложухи</h2>
-            <div class="projects-grid">
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="app.jpg" alt="Android App">
-                    </div>
-                    <div class="project-info">
-                        <h3>ФПИ. Кошель</h3>
-                        <p>Мобильное приложение для Android</p>
-                        <a href="app-release (1).apk" download class="project-link">Скачать APK</a>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="app.jpg" alt="Android App">
-                    </div>
-                    <div class="project-info">
-                        <h3>WildHeris</h3>
-                        <p>Мобильное приложение для Android</p>
-                        <a href="app-release.apk" download class="project-link">Скачать APK</a>
-                    </div>
-                </div>
-				<div class="project-card">
-                    <div class="project-image">
-                        <img src="app.jpg" alt="Android App">
-                    </div>
-                    <div class="project-info">
-                        <h3>Escape of Memes</h3>
-                        <p>Мобильная игра для Android</p>
-                        <a href="app-release (3).apk" download class="project-link">Скачать APK</a>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="app.jpg" alt="Android App">
-                    </div>
-                    <div class="project-info">
-                        <h3>ты на счетчике хе</h3>
-                        <p>Мобильное приложение для Android</p>
-                        <a href="Base.apk" download class="project-link">Скачать APK</a>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="app.jpg" alt="Windows App">
-                    </div>
-                    <div class="project-info">
-                        <h3>GTA 6 ULTRA PRO MAX EDITION for Win</h3>
-                        <p>Программа для Windows</p>
-                        <a href="gta6.exe" download class="project-link">Скачать EXE</a>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="app.jpg" alt="Android App">
-                    </div>
-                    <div class="project-info">
-                        <h3>GTA 6 ULTRA PRO MAX EDITION</h3>
-                        <p>Мобильное приложение для Android</p>
-                        <a href="gta6ultrapromax-signed.apk" download class="project-link">Скачать APK</a>
-                    </div>
-                </div>
-				<div class="project-card">
-                    <div class="project-image">
-                        <img src="app.jpg" alt="Android App">
-                    </div>
-                    <div class="project-info">
-                        <h3>ChelGram</h3>
-                        <p>Мобильное приложение для Android</p>
-                        <a href="chelgram-1.1.2.apk" download class="project-link">Скачать APK</a>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="app.jpg" alt="Android App">
-                    </div>
-                    <div class="project-info">
-                        <h3>Simple Platformer</h3>
-                        <p>Мобильное приложение для Android</p>
-                        <a href="Simple Platformer-1_0_1.apk" download class="project-link">Скачать APK</a>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="app.jpg" alt="Windows App">
-                    </div>
-                    <div class="project-info">
-                        <h3>Simple Platformer for Windows</h3>
-                        <p>Декстоп приложение для Windows</p>
-                        <a href="Simple Platformer-1_0_1-windows.exe" download class="project-link">Скачать EXE</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="about" class="about">
-            <h2>О компании</h2>
-            <p>cheldev - это команда профессионалов, специализирующихся на разработке программного обеспечения. Мы создаем инновационные решения, которые помогают бизнесу расти и развиваться.</p>
-            <p>наша тгешка <a href="https://t.me/cheldevv" target="_blank">тут</a></p>
-        </section>
-    </main>
-
-    <footer>
-        <div class="footer-content">
-            <div class="footer-info">
-                <h3>cheldev</h3>
-                <p>Инновационные IT-решения</p>
-            </div>
-            <div class="footer-links">
-                <a href="#privacy">Политика конфиденциальности</a>
-                <a href="#terms">Условия использования</a>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <p>&copy; 2025 cheldev. Все права защищены.</p>
-        </div>
-    </footer>
-
-    <script src="script.js"></script>
+    <a href="https://cheldev.base44.app/">!Новый сайт!</a>
 </body>
 </html> 
